location update for contact page

--- a/src/_includes/post-bc.njk
+++ b/src/_includes/post-bc.njk
@@ -1,5 +1,8 @@
+---
+templateEngineOverride: njk,md
+---
 <ol class="breadcrumb">
   <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url}} target="_self" rel="noopener noreferrer"">Home</a></li>
-  <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url + 'outreach/#'}} target="_self" rel="noopener noreferrer"">Outreach</a></li>
+  <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url + 'outreach/'}} target="_self" rel="noopener noreferrer"">Outreach</a></li>
   <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
 </ol>
