--- a/src/contact/index.njk
+++ b/src/contact/index.njk
@@ -15,7 +15,7 @@ templateEngineOverride: njk,md
     <div class="col-lg-4">
       <h3>Location</h3>
       <address class="py-2">
-        608 South Hico Street<br>
+        P.O. Box 1128<br>
         Siloam Springs, AR 72761<br>
         </address>
     </div>
