--- a/src/_layouts/landing.njk
+++ b/src/_layouts/landing.njk
@@ -3,37 +3,12 @@ templateLayoutResolver: njk, md
 ---
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <!-- Head -->
-  {% include '../_includes/head.html' %}
-  <!-- END Head -->
-</head>
-<body class="landing">
-  <!-- Header -->
-  <div class="bg-primary">
-    <header  class="navbar navbar-expand-md navbar-dark bd-navbar">{% include '../_includes/landing-header.html' %}</header>
-  </div>
-  <!-- End Header -->
-  {% if page.fileSlug != "" %}
-  <!-- breadcrumb -->
-  <nav aria-label="breadcrumb" class="container">
-    {% if '/outreach/*' in page.url %}
-      {% include '../_includes/post-bc.njk' %}
-    {% else %}
-      {% include '../_includes/base-bc.njk' %}    
-    {% endif %}
-  </nav>
-  <!-- END breadcrumb -->
-  {% endif %}
-  <!-- Main Content -->
-  <main class="mt-5">{{ content | safe }}</main>
-  <!-- END Main Content -->
-  <!-- Footer -->
-  <footer class="bg-primary">{% include '../_includes/footer.html' %}</footer>
-  <!-- END Footer -->
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="{{site.url + 'javascript/footer-javascript.js'}}"></script>
-  <!-- END Scripts -->
-</body>
+  <head>{% include '../_includes/head.html' %}</head>
+  <body class="landing">
+    <header  class="navbar navbar-expand-md navbar-dark bd-navbar bg-primary">{% include '../_includes/landing-header.html' %}</header>
+    <main class="mt-5">{{ content | safe }}</main>
+    <footer class="bg-primary">{% include '../_includes/footer.html' %}</footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{site.url + 'javascript/footer-javascript.js'}}"></script>
+  </body>
 </html>
