--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -6,7 +6,8 @@
     <hr class="d-md-none text-black-50">
     <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
       <li class="nav-item col-6 col-md-auto">
-        <a class="nav-link p-2" href="{{site.url}}" target="_self" rel="noopener noreferrer" >Home</a>
+        <a class="nav-link p-2 {{ 'active' if page.fileSlug == '' }}" 
+        href="{{site.url}}" target="_self" rel="noopener noreferrer" >Home</a>
       </li>
       <li class="nav-item col-6 col-md-auto">
         <a class="nav-link p-2 {{ 'active' if '/about' in page.url }}" href="{{site.url + 'about/'}}" target="_self" rel="noopener noreferrer" >About</a>
