--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -4,10 +4,9 @@ templateEngineOverride: njk,md
 <!DOCTYPE html>
 <html lang="en">
   <head>{% include '../_includes/head.html' %}</head>
-  <body class="">
+  <body class="{{ 'landing' if page.fileSlug == '' }}">
     <header>
-      <div  class="navbar navbar-expand-md navbar-dark bd-navbar bg-primary">{% include '../_includes/header.njk' %}</div>
-      {% if page.fileSlug != "" %}<nav aria-label="breadcrumb" class="container">{% if '/outreach/*' in page.url %}{% include '../_includes/breadcrumbs/outreach-bc.njk' %}{% else %}{% include '../_includes/breadcrumbs/base-bc.njk' %}{% endif %}</nav>{% endif %}
+      <div  class="navbar navbar-expand-md navbar-dark bd-navbar bg-primary">{% include '../_includes/header.njk' %}</div>{% if page.fileSlug != "" %}<nav aria-label="breadcrumb" class="container">{% if '/outreach/*' in page.url %}{% include '../_includes/breadcrumbs/outreach-bc.njk' %}{% else %}{% include '../_includes/breadcrumbs/base-bc.njk' %}{% endif %}</nav>{% endif %}
     </header>
     <main class="mt-5">{{ content | safe }}</main>
     <footer class="bg-primary">{% include '../_includes/footer.html' %}</footer>
