--- a/src/_layouts/landing.njk
+++ b/src/_layouts/landing.njk
@@ -5,7 +5,7 @@ templateLayoutResolver: njk, md
 <html lang="en">
   <head>{% include '../_includes/head.html' %}</head>
   <body class="landing">
-    <header  class="navbar navbar-expand-md navbar-dark bd-navbar bg-primary">{% include '../_includes/landing-header.html' %}</header>
+    <header  class="navbar navbar-expand-md navbar-dark bd-navbar bg-primary">{% include '../_includes/header.html' %}</header>
     <main class="mt-5">{{ content | safe }}</main>
     <footer class="bg-primary">{% include '../_includes/footer.html' %}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
