--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,6 @@
 ---
 title: NWA Second Stage Transition's a place for you when you need help the most.
-layout: landing.njk
+layout: base.njk
 templateEngineOverride: njk,md
 ---
 <div class="d-flex text-center container justify-content-center">
