modifying #container width

--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ title: NWA Second Stage Transition's a place for you when you need help the most
 layout: base.njk
 templateEngineOverride: njk,md
 ---
-<div class="d-flex text-center container justify-content-center">
+<div class="">
   <div class="row">
     <div class="col-md-12 p-3 mb-5 bg-white-transparent rounded">
       <h2 class="cover-heading">After the rain, the sun will shine.</h2>
