--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -8,7 +8,7 @@ templateEngineOverride: njk,md
     <header>
       <div  class="navbar navbar-expand-md navbar-dark bd-navbar bg-primary">{% include '../_includes/header.njk' %}</div>{% if page.fileSlug != "" %}<nav aria-label="breadcrumb" class="container">{% if '/outreach/*' in page.url %}{% include '../_includes/breadcrumbs/outreach-bc.njk' %}{% else %}{% include '../_includes/breadcrumbs/base-bc.njk' %}{% endif %}</nav>{% endif %}
     </header>
-    <main class="mt-5">{{ content | safe }}</main>
+    <main class="d-flex text-center container justify-content-center mt-5">{{ content | safe }}</main>
     <footer class="bg-primary">{% include '../_includes/footer.html' %}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{site.url + 'javascript/footer-javascript.js'}}"></script>
