--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -3,9 +3,7 @@
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- * modified: #container 
  */
-
 :root {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
@@ -585,18 +583,20 @@ progress {
     .container-lg,
     .container-md,
     .container-sm {
-        max-width: 720px;
+        max-width: 960px;
     }
 }
 @media (min-width: 1200px) {
+    .container,
     .container-lg,
     .container-md,
     .container-sm,
     .container-xl {
-        max-width: 1020px;
+        max-width: 1140px;
     }
 }
 @media (min-width: 1400px) {
+    .container,
     .container-lg,
     .container-md,
     .container-sm,
@@ -9805,4 +9805,3 @@ fieldset:disabled .btn {
         display: none !important;
     }
 }
-
