--- a/src/about/index.njk
+++ b/src/about/index.njk
@@ -3,144 +3,144 @@ title: NWA Second Stage Transition's a place for you when you need help the most
 layout: base.njk
 templateEngineOverride: njk,md
 ---
-<div class="container">
-  <!-- Our Story -->
-  <div id="ourStory" class="row p-3 text-center">
-    <div class="col-md-11 mx-auto my-3 ">
-      <h1 class="display-4 pb-3 fw-normal">Our Story</h1>
-      <p class="lead">NWA Second Stage Transition is a tax-exempt nonprofit organization with a 501(c)(3)
+<!-- Page Intro -->
+<div class="row justify-content-center text-center">
+  <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
+    <h1 class="h1">Our Story</h1>
+    <p class="pb-3 lead">NWA Second Stage Transition is a tax-exempt nonprofit organization with a 501(c)(3)
         status. This organization helps encourage transformation to individuals who are willing to
         break the bondage of abuse to find hope and take control of their lives. NWA Second Stage Transition
         seeks to strengthen linkages between clients and community-based resources to prevent the progression
         of abuse, addiction, and homelessness. NWA Second Stage Transition believes each person is created to
         be unique and valuable.</p>
+  </div>
+</div>
+<!-- End Page Intro -->
+<!-- aboutCarousel -->
+<div id="aboutCarousel" class="carousel carousel-dark slide " data-bs-interval="8000" data-bs-ride="carousel"
+  data-bs-keyboard="true">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#aboutCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#aboutCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#aboutCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="container">
+        <div class="carousel-caption align-items-center h-75">
+          <h1>Mission</h1>
+          <p class="lead">To educate, empower, provide safety, and opportunities to individuals and families who want to restore a
+            balanced life and prevent the cycle of addiction, homelessness, and domestic violence. </p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="container">
+        <div class="carousel-caption align-items-center h-75">
+          <h1>Vision</h1>
+          <p class="lead">A community where individuals and families are empowered, transformed, given hope, and held accountably.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="container">
+        <div class="carousel-caption align-items-center h-75">
+          <h1>Values</h1>
+          <p class="lead">Professionalism • Confidentiality • Authenticity • Integrity • Inclusivity • Respect</p>
+        </div>
+      </div>
     </div>
   </div>
-  <!-- END Our Story -->
-  <!-- aboutCarousel -->
-  <div id="aboutCarousel" class="carousel carousel-dark slide " data-bs-interval="8000" data-bs-ride="carousel"
-    data-bs-keyboard="true">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#aboutCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#aboutCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#aboutCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  <button class="carousel-control-prev" type="button" data-bs-target="#aboutCarousel" data-bs-slide="prev">
+  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <span class="visually-hidden">Previous</span>
+</button>
+  <button class="carousel-control-next" type="button" data-bs-target="#aboutCarousel" data-bs-slide="next">
+  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <span class="visually-hidden">Next</span>
+</button>
+</div>
+<!-- END aboutCarousel -->
+<hr id="ourTeam" class="featurette-divider">
+<!-- Our Team -->
+<div class="p-3 text-center">
+  <div class="col-md-11 mx-auto my-3 ">
+    <h1 class="display-4 pb-3 fw-normal">Our Team</h1>
+  </div>
+  <div class="col-md-11 mx-auto my-3 ">
+    <p class="lead">Our professional staff are here to help you understand how to deal with difficult situations. On
+      staff we have a variety of licenses. Like LPC, LADC, AADC, CPI, CDEA, CIRW, CTIC, etc.</p>
+  </div>
+</div>
+<div class="container sectionMod">
+  <div class="row pb-3 justify-content-evenly">
+    <div class="col-lg-2 text-center">
+      <h2 class="">Cecelia</h2>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div class="container">
-          <div class="carousel-caption align-items-center h-75">
-            <h1>Mission</h1>
-            <p class="lead">To educate, empower, provide safety, and opportunities to individuals and families who want to restore a
-              balanced life and prevent the cycle of addiction, homelessness, and domestic violence. </p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption align-items-center h-75">
-            <h1>Vision</h1>
-            <p class="lead">A community where individuals and families are empowered, transformed, given hope, and held accountably.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption align-items-center h-75">
-            <h1>Values</h1>
-            <p class="lead">Professionalism • Confidentiality • Authenticity • Integrity • Inclusivity • Respect</p>
-          </div>
+    <div class="col-lg-2 text-center">
+      <h2 class="">Kormah</h2>
+    </div>
+    <div class="col-lg-2 text-center">
+      <h2 class="">Dwight</h2>
+    </div>
+    <div class="col-lg-2 text-center">
+      <h2 class="">Samuel</h2>
+    </div>
+    <div class="col-lg-2 text-center">
+      <h2 class="">Phil</h2>
+    </div>
+  </div>
+</div>
+<!-- END Our Team -->
+<hr id="ourTeam" class="featurette-divider">
+<!-- imgCarousel -->
+<div id="imgCarousel" class="carousel carousel-dark slide " data-bs-interval="8000" data-bs-ride="carousel"
+  data-bs-keyboard="true">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="container">
+        <div class="carousel-caption align-items-center w-75">
+          <img alt="a counselor" class="d-block fuild-img" src="{{site.url + 'images/counselor.jpg'}}">
         </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#aboutCarousel" data-bs-slide="prev">
+    <div class="carousel-item">
+      <div class="container">
+        <div class="carousel-caption align-items-center w-75">
+          <img alt="a picture with different words being used to describe Counseling" class="d-block fuild-img" src="{{site.url + 'images/counseling.jpg'}}">
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="container">
+        <div class="carousel-caption align-items-center w-75">
+          <img alt="a group of parents and kids discussion issues." class="d-block fuild-img w-50" src="{{site.url + 'images/parenting-group.jpg'}}">
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="container">
+        <div class="carousel-caption align-items-center w-75">
+          <img alt="someone enjoying the a sunrise or sunset." style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url + 'images/sunrise.jpg'}}">
+        </div>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#imgCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#aboutCarousel" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#imgCarousel" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-  </div>
-  <!-- END aboutCarousel -->
-  <hr id="ourTeam" class="featurette-divider">
-  <!-- Our Team -->
-  <div class="p-3 text-center">
-    <div class="col-md-11 mx-auto my-3 ">
-      <h1 class="display-4 pb-3 fw-normal">Our Team</h1>
-    </div>
-    <div class="col-md-11 mx-auto my-3 ">
-      <p class="lead">Our professional staff are here to help you understand how to deal with difficult situations. On
-        staff we have a variety of licenses. Like LPC, LADC, AADC, CPI, CDEA, CIRW, CTIC, etc.</p>
-    </div>
-  </div>
-  <div class="container sectionMod">
-    <div class="row pb-3 justify-content-evenly">
-      <div class="col-lg-2 text-center">
-        <h2 class="">Cecelia</h2>
-      </div>
-      <div class="col-lg-2 text-center">
-        <h2 class="">Kormah</h2>
-      </div>
-      <div class="col-lg-2 text-center">
-        <h2 class="">Dwight</h2>
-      </div>
-      <div class="col-lg-2 text-center">
-        <h2 class="">Samuel</h2>
-      </div>
-      <div class="col-lg-2 text-center">
-        <h2 class="">Phil</h2>
-      </div>
-    </div>
-  </div>
-  <!-- END Our Team -->
-  <hr id="ourTeam" class="featurette-divider">
-  <!-- imgCarousel -->
-  <div id="imgCarousel" class="carousel carousel-dark slide " data-bs-interval="8000" data-bs-ride="carousel"
-    data-bs-keyboard="true">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div class="container">
-          <div class="carousel-caption align-items-center w-75">
-            <img alt="a counselor" class="d-block fuild-img" src="{{site.url + 'images/counselor.jpg'}}">
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption align-items-center w-75">
-            <img alt="a picture with different words being used to describe Counseling" class="d-block fuild-img" src="{{site.url + 'images/counseling.jpg'}}">
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption align-items-center w-75">
-            <img alt="a group of parents and kids discussion issues." class="d-block fuild-img w-50" src="{{site.url + 'images/parenting-group.jpg'}}">
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption align-items-center w-75">
-            <img alt="someone enjoying the a sunrise or sunset." style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url + 'images/sunrise.jpg'}}">
-          </div>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#imgCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#imgCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>  <!-- END imgCarousel -->  
-</div><!-- end container -->
+</div>
+<!-- END imgCarousel -->  
+
