--- a/src/contact/index.njk
+++ b/src/contact/index.njk
@@ -3,37 +3,37 @@ title: Contact
 layout: base.njk
 templateEngineOverride: njk,md
 ---
-<!-- START of the CONTACT INFORMATION Section -->
-<div class="p-3 text-center align-content-evenly">
-  <div class="col-md-11 mx-auto my-3 ">
-    <h1 class="display-4 pb-3 fw-normal">Contact</h1>
+<!-- Page Intro -->
+<div class="row justify-content-center text-center">
+  <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
+    <h1 class="h1">Contact</h1>
   </div>
 </div>
-<div class="container sectionMod">
-  <!-- Three columns of text below the carousel -->
-  <div class="row p-3 text-center">
-    <div class="col-lg-4">
-      <h3>Location</h3>
-      <address class="py-2">
-        P.O. Box 1128<br>
-        Siloam Springs, AR 72761<br>
-        </address>
-    </div>
-    <div class="col-lg-4">
-      <h3>Phone</h3>
-      <address class="py-2">
-          <a class="nav-link" href="tel:14795493737" target="_self" rel="noopener noreferrer">(479) 549-3737</a><br>
-        </address>
-    </div>
-    <div class="col-lg-4">
-      <h3>Hours</h3>
-      <span class="py-2">
-          Open by appointment<br>
-        </span>
-    </div>
+<!-- End Page Intro -->
+<!-- Contact -->
+<div class="row p-3 text-center align-content-evenly">
+  <div class="col-lg-4">
+    <h2 class="h2">Location</h2>
+    <address class="py-2">
+      P.O. Box 1128<br>
+      Siloam Springs, AR 72761<br>
+    </address>
   </div>
-</div><!-- /.row -->
-<!-- End of the CONTACT INFORMATION section -->
+  <div class="col-lg-4">
+    <h2 class="h2">Phone</h2>
+    <address class="py-2">
+      <a class="nav-link" href="tel:14795493737" target="_self" rel="noopener noreferrer">(479) 549-3737</a><br>
+    </address>
+  </div>
+  <div class="col-lg-4">
+    <h2 class="h2">Hours</h2>
+    <span class="py-2">
+      Open by appointment<br>
+    </span>
+  </div>
+</div>
+<!-- End Contact -->
+<!-- iframe -->
 <div class="container py-3">
   <div class="contact-form d-flex flex-row justify-content-center">
     <div class="embed-responsive mt-3" style="overflow:hidden;">
@@ -41,3 +41,4 @@ templateEngineOverride: njk,md
     </div>
   </div>
 </div>
+<!-- End iframe -->
