--- a/src/index.njk
+++ b/src/index.njk
@@ -3,12 +3,10 @@ title: NWA Second Stage Transition's a place for you when you need help the most
 layout: base.njk
 templateEngineOverride: njk,md
 ---
-<div class="">
-  <div class="row">
-    <div class="col-md-12 p-3 mb-5 bg-white-transparent rounded">
-      <h2 class="cover-heading">After the rain, the sun will shine.</h2>
-      <p class="lead">We empower individuals transition to a new stage in life. Learn more about our purpose and vision at NWA Second Stage Transition.</p>
-      <p class="mt-3"><a class="btn text-primary bg-warning" href="{{site.url + 'about/'}}" target="_self" rel="noopener noreferrer" >Learn More</a></p>
-    </div>
+<div class="row justify-content-center text-center">
+  <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
+    <h1 class="h1">After the rain, the sun will shine.</h1>
+    <p class="lead p-3 ">We empower individuals transition to a new stage in life. Learn more about our purpose and vision at NWA Second Stage Transition.</p>
+    <p class="lead mt-3"><a class="btn text-primary bg-warning" href="{{site.url + 'about/'}}" target="_self" rel="noopener noreferrer" >Learn More</a></p>
   </div>
 </div>
