--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -2,28 +2,26 @@
 layout: base.njk
 title: We believe in community and like to be involved.
 ---
-<!-- Page Intro section -->
-<div class="container">
-  <div id="ourStory" class="position-relative overflow-hidden p-3 p-md-3 m-md-3 text-center">
-    <div class="col-md-11 mx-auto my-3">
-      <h1 class="display-4 pb-3 fw-normal">Outreach</h1>
-      <p class="lead fw-normal">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab fugit, excepturi obcaecati
-        sed, quasi officiis quis quod magni ut placeat a voluptatum debitis porro dolores.</p>
-    </div>
+<!-- Page Intro -->
+<div class="row justify-content-center text-center">
+  <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
+    <h1 class="cover-heading">Outreach</h1>
+    <p class="pb-3 lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab fugit, excepturi obcaecati
+      sed, quasi officiis quis quod magni ut placeat a voluptatum debitis porro dolores.</p>
   </div>
-  <!-- End Page Intro section -->
-  <hr class="featurette-divider">
-  <!-- Wrap the rest of the page in another container to center all the content. -->
-  <div class="container">
-    <!-- Three columns of text below the carousel -->
-    <div id="team" class="row w-75 mx-auto">
-      <div class="col-lg-12">
-        {% for post in collections.post | reverse %}<article>
-          <h2><a class="" href="{{ post.url | url }}" target="_self" rel="noopener noreferrer">{{ post.data.title }}</a></h2>
-          <p>{{ post.data.publishDate | postDate }}</p>
-        </article>
-        {% endfor %}</div><!-- /.col-lg-12 -->
-    </div><!-- /.row -->
-    <!-- END Team Section -->
-  </div><!-- /.container -->
+</div>
+<!-- End Page Intro -->
+<hr class="featurette-divider">
+<!-- Wrap the rest of the page in another container to center all the content. -->
+<div class="container">
+  <!-- Three columns of text below the carousel -->
+  <div id="team" class="row w-75 mx-auto">
+    <div class="col-lg-12">
+      {% for post in collections.post | reverse %}<article>
+        <h2><a class="" href="{{ post.url | url }}" target="_self" rel="noopener noreferrer">{{ post.data.title }}</a></h2>
+        <p>{{ post.data.publishDate | postDate }}</p>
+      </article>
+      {% endfor %}</div><!-- /.col-lg-12 -->
+  </div><!-- /.row -->
+  <!-- END Team Section -->
 </div>
