--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -3,21 +3,17 @@ title: NWA Second Stage Transition's a place for you when you need help the most
 layout: base.njk
 templateEngineOverride: njk,md
 ---
-<div class="container">
-  <!-- Services  -->
-  <div class="row">
-    <div class="position-relative overflow-hidden p-3 p-md-3 m-md-3 text-center">
-      <div class="col-md-11 mx-auto my-3 ">
-        <h1 class="display-4 pb-3 fw-normal">Services</h1>
-        <p class="pb-3 lead">Our Counseling model, Support Group meetings, and Case Management Services provide a
-          well-rounded approach to help identify barriers, encourage a healthy lifestyle and achieve personal goals.</p>
-      </div>
-      <div class="product-device shadow-sm d-none d-md-block"></div>
-      <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-    </div>
+<!-- Page Intro -->
+<div class="row justify-content-center text-center">
+  <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
+    <h1 class="cover-heading">Services</h1>
+    <p class="pb-3 lead">Our Counseling model, Support Group meetings, and Case Management Services provide a
+      well-rounded approach to help identify barriers, encourage a healthy lifestyle and achieve personal goals.</p>
   </div>
-  <!-- end Services -->
-  <!-- Accordion -->
+</div>
+<!-- End Page Intro -->
+<!-- Services  -->
+<div class="row">
   <div class="accordion accordion-flush col-sm-12 col-md-12 p-3 m-3" id="accordionFlushExample">
     <!-- accordion item assessment start -->
     <div class="accordion-item">
@@ -143,9 +139,11 @@ templateEngineOverride: njk,md
       </div>
     </div>
   </div>
-  <!-- Accordion - ends -->
+</div>
+<!-- End Services -->
+<!-- servicesCarousel -->
+<div class="row">
   <div class="col-sm-12 col-md-12 p-3 m-3 w-75 mx-auto">
-    <!-- servicesCarousel -->
     <div id="servicesCarousel" class="carousel carousel-dark slide " data-bs-interval="8000" data-bs-ride="carousel"
       data-bs-keyboard="true">
       <div class="carousel-indicators">
@@ -186,4 +184,4 @@ templateEngineOverride: njk,md
       </button>
     </div>
   </div> <!-- END servicesCarousel -->
-</div> <!-- end container -->
+</div>
