changed folder heiarchy by adding in carousel under images

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -4,7 +4,7 @@ templateEngineOverride: njk,md
 <!DOCTYPE html>
 <html lang="en">
   <head>{% include '../_includes/head.html' %}</head>
-  <body class="{{ 'landing' if page.fileSlug == '' }}">
+  <body class="text {{ 'landing' if page.fileSlug == '' }}">
     <header>
       <div  class="navbar navbar-expand-md navbar-dark bd-navbar bg-primary">{% include '../_includes/header.njk' %}</div>{% if page.fileSlug != "" %}<nav aria-label="breadcrumb" class="container">{% if '/outreach/*' in page.url %}{% include '../_includes/breadcrumbs/outreach-bc.njk' %}{% else %}{% include '../_includes/breadcrumbs/base-bc.njk' %}{% endif %}</nav>{% endif %}
     </header>
