--- a/src/contact/index.njk
+++ b/src/contact/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Contact
+title: Contact | Connect with NWA Second Stage Transition 
 layout: base.njk
 templateEngineOverride: njk,md
 ---
@@ -14,20 +14,20 @@ templateEngineOverride: njk,md
 <div class="row p-3 text-center align-content-evenly">
   <div class="col-lg-4">
     <h2 class="h2">Location</h2>
-    <address class="py-2">
+    <address class="p-3 lead">
       P.O. Box 1128<br>
       Siloam Springs, AR 72761<br>
     </address>
   </div>
   <div class="col-lg-4">
     <h2 class="h2">Phone</h2>
-    <address class="py-2">
-      <a class="nav-link" href="tel:14795493737" target="_self" rel="noopener noreferrer">(479) 549-3737</a><br>
+    <address class="p-3 lead">
+      <a class="nav-link p-1" href="tel:14795493737" target="_self" rel="noopener noreferrer">(479) 549-3737</a><br>
     </address>
   </div>
   <div class="col-lg-4">
-    <h2 class="h2">Hours</h2>
-    <span class="py-2">
+    <h2 class="h2 p-2">Hours</h2>
+    <span class="p-3 lead">
       Open by appointment<br>
     </span>
   </div>
