--- a/src/donation-completed.njk
+++ b/src/donation-completed.njk
@@ -1,5 +1,5 @@
 ---
-title: NWA Second Stage Transition's a place for you when you need help the most.
+title: Donation to NWASST Completed
 layout: base.njk
 templateEngineOverride: njk,md
 ---
