--- a/src/get-involved.njk
+++ b/src/get-involved.njk
@@ -1,5 +1,5 @@
 ---
-title: NWA Second Stage Transition's a place for you when you need help the most.
+title: Get Involved | NWA SST is a place where you can help those in need.
 layout: base.njk
 templateEngineOverride: njk,md
 ---
