--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -1,5 +1,5 @@
 ---
-title: NWA Second Stage Transition's a place for you when you need help the most.
+title: Services | NWASST has a variety of services to help you. Like Assessment, Counseling, Parenting Class, Support Group, and more.
 layout: base.njk
 templateEngineOverride: njk,md
 ---
