--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -1,4 +1,5 @@
 ---
+title: Sitemap | NWA Second Stage Transition's website sitemap. 
 permalink: /sitemap.xml
 eleventyExcludeFromCollections: true
 ---
