--- a/src/about/index.njk
+++ b/src/about/index.njk
@@ -1,5 +1,5 @@
 ---
-title: NWA Second Stage Transition's a place for you when you need help the most.
+title: About | NWA Second Stage Transition's story is one of hope for those in need.
 layout: base.njk
 templateEngineOverride: njk,md
 ---
@@ -7,7 +7,7 @@ templateEngineOverride: njk,md
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
     <h1 class="h1">Our Story</h1>
-    <p class="pb-3 lead">NWA Second Stage Transition is a tax-exempt nonprofit organization with a 501(c)(3)
+    <p class="p-3 lead">NWA Second Stage Transition is a tax-exempt nonprofit organization with a 501(c)(3)
         status. This organization helps encourage transformation to individuals who are willing to
         break the bondage of abuse to find hope and take control of their lives. NWA Second Stage Transition
         seeks to strengthen linkages between clients and community-based resources to prevent the progression
@@ -28,8 +28,8 @@ templateEngineOverride: njk,md
     <div class="carousel-item active">
       <div class="container">
         <div class="carousel-caption align-items-center h-75">
-          <h1>Mission</h1>
-          <p class="lead">To educate, empower, provide safety, and opportunities to individuals and families who want to restore a
+          <h3 class="h3">Mission</h3>
+          <p class="p-3 lead">To educate, empower, provide safety, and opportunities to individuals and families who want to restore a
             balanced life and prevent the cycle of addiction, homelessness, and domestic violence. </p>
         </div>
       </div>
@@ -37,8 +37,8 @@ templateEngineOverride: njk,md
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center h-75">
-          <h1>Vision</h1>
-          <p class="lead">A community where individuals and families are empowered, transformed, given hope, and held accountably.
+          <h3 class="h3">Vision</h3>
+          <p class="p3 lead">A community where individuals and families are empowered, transformed, given hope, and held accountably.
           </p>
         </div>
       </div>
@@ -46,8 +46,8 @@ templateEngineOverride: njk,md
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center h-75">
-          <h1>Values</h1>
-          <p class="lead">Professionalism • Confidentiality • Authenticity • Integrity • Inclusivity • Respect</p>
+          <h3 class="h3">Values</h3>
+          <p class="p-3 lead">Professionalism • Confidentiality • Authenticity • Integrity • Inclusivity • Respect</p>
         </div>
       </div>
     </div>
@@ -66,29 +66,29 @@ templateEngineOverride: njk,md
 <!-- Our Team -->
 <div class="p-3 text-center">
   <div class="col-md-11 mx-auto my-3 ">
-    <h1 class="display-4 pb-3 fw-normal">Our Team</h1>
+    <h2 class="h2 display-4 pb-3 fw-normal">Our Team</h2>
   </div>
   <div class="col-md-11 mx-auto my-3 ">
-    <p class="lead">Our professional staff are here to help you understand how to deal with difficult situations. On
+    <p class="p-3 lead">Our professional staff are here to help you understand how to deal with difficult situations. On
       staff we have a variety of licenses. Like LPC, LADC, AADC, CPI, CDEA, CIRW, CTIC, etc.</p>
   </div>
 </div>
 <div class="container sectionMod">
   <div class="row pb-3 justify-content-evenly">
     <div class="col-lg-2 text-center">
-      <h2 class="">Cecelia</h2>
+      <h3 class="h3">Cecelia</h3>
     </div>
     <div class="col-lg-2 text-center">
-      <h2 class="">Kormah</h2>
+      <h3 class="h3">Kormah</h3>
     </div>
     <div class="col-lg-2 text-center">
-      <h2 class="">Dwight</h2>
+      <h3 class="h3">Dwight</h3>
     </div>
     <div class="col-lg-2 text-center">
-      <h2 class="">Samuel</h2>
+      <h3 class="h3">Samuel</h3>
     </div>
     <div class="col-lg-2 text-center">
-      <h2 class="">Phil</h2>
+      <h3 class="h3">Phil</h3>
     </div>
   </div>
 </div>
@@ -107,28 +107,28 @@ templateEngineOverride: njk,md
     <div class="carousel-item active">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="a counselor" class="d-block fuild-img" src="{{site.url + 'images/counselor.jpg'}}">
+          <img alt="a counselor" class="d-block fuild-img" src="{{site.url + 'images/carousel/counselor.jpg'}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="a picture with different words being used to describe Counseling" class="d-block fuild-img" src="{{site.url + 'images/counseling.jpg'}}">
+          <img alt="a picture with different words being used to describe Counseling" class="d-block fuild-img" src="{{site.url + 'images/carousel/counseling.jpg'}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="a group of parents and kids discussion issues." class="d-block fuild-img w-50" src="{{site.url + 'images/parenting-group.jpg'}}">
+          <img alt="a group of parents and kids discussion issues." class="d-block fuild-img w-50" src="{{site.url + 'images/carousel/parenting-group.jpg'}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="someone enjoying the a sunrise or sunset." style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url + 'images/sunrise.jpg'}}">
+          <img alt="someone enjoying the a sunrise or sunset." style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url + 'images/carousel/sunrise.jpg'}}">
         </div>
       </div>
     </div>
