--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,5 @@
 ---
-title: NWA Second Stage Transition's a place for you when you need help the most.
+title: Home | NWA Second Stage Transition's a place for you when you need help the most.
 layout: base.njk
 templateEngineOverride: njk,md
 ---
