--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -1,6 +1,6 @@
 ---
 layout: base.njk
-title: We believe in community and like to be involved.
+title: Outreach | Community is where we see our greatest opportunities.
 ---
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
