--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,4 +1,6 @@
-/* // https://kinsta.com/blog/optimize-css/ */
+/* // https://kinsta.com/blog/optimize-css/ 
+https://www.zachleat.com/web/eleventy-image/
+*/
 /** below the fold footer **/
 html { 
   overflow: auto 
