temperarily removed outreach from header and footer

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -7,9 +7,11 @@
           <li class="my-3 text-center">
             <a class="quick-link" href="{{site.url + 'about/'}}" target="_self" rel="noopener noreferrer">About</a>
           </li>
+          <!-- temperarily removed
           <li class="my-3 text-center">
             <a class="quick-link" href="{{site.url + 'outreach/'}}" target="_self" rel="noopener noreferrer">Outreach</a>
           </li>
+          -->
           <li class="my-3 text-center">
             <a class="quick-link" href="{{site.url + 'contact/'}}" target="_self" rel="noopener noreferrer">Contact</a>
           </li>
