--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -15,9 +15,11 @@
       <li class="nav-item col-6 col-md-auto">
         <a class="nav-link p-2 m-2 {{ 'active' if '/services' in page.url }}" href="{{site.url + 'services/'}}" target="_self" rel="noopener noreferrer" >Services</a>
       </li>
+      <!-- temperarily removed 
       <li class="nav-item col-6 col-md-auto">
         <a class="nav-link p-2 m-2 {{ 'active' if '/outreach' in page.url }}" href="{{site.url + 'outreach/'}}" target="_self" rel="noopener noreferrer" >Outreach</a>
       </li>
+      -->
       <li class="nav-item col-6 col-md-auto">
         <a class="nav-link p-2 m-2 {{ 'active' if '/get-involved' in page.url }}" href="{{site.url + 'get-involved/'}}" target="_self" rel="noopener noreferrer" >Get Involved</a>
       </li>
