updated carousel image urls

--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -151,21 +151,21 @@ templateEngineOverride: njk,md
         <div class="carousel-item active">
           <div class="container">
             <div class="carousel-caption align-items-center h-75">
-              <img alt="Support Group" class="d-block fuild-img" src="/assets/img/group-discusion-612w.jpg">
+              <img alt="Support Group" class="d-block fuild-img" src="{{site.url + 'images/carousels/group-discusion-612w.jpg'}}">
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="container">
             <div class="carousel-caption align-items-center h-75">
-              <img alt="Office" class="d-block fuild-img" src="/assets/img/office2-w525.jpg">
+              <img alt="Office" class="d-block fuild-img" src="{{site.url + 'images/carousels/office2-w525.jpg'}}">
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="container">
             <div class="carousel-caption align-items-center h-75">
-              <img alt="Self help books" class="d-block fuild-img" src="/assets/img/dv-book-720w.jpg">
+              <img alt="Self help books" class="d-block fuild-img" src="{{site.url + 'images/carousels/dv-book-720w.jpg'}}">
             </div>
           </div>
         </div>
