updated navigation url for sign-up

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -32,8 +32,8 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle p-2 m-2 {{ 'active' if '/sign-up/' in page.url }}" href="#" role="button" target="_self" rel="noopener noreferrer"  data-bs-toggle="dropdown">Sign-Up</a>
         <ul class="dropdown-menu dropdown-menu-end ">
-          <li><a class="dropdown-item" href="{{site.url + 'sign-up/assessment/#'}}" target="_self" rel="noopener noreferrer" >Assessment</a></li>
-          <li><a class="dropdown-item" href="{{site.url + 'sign-up/class-group/#'}}" target="_self" rel="noopener noreferrer" >Class / Group</a></li>
+          <li><a class="dropdown-item" href="{{site.url + 'sign-up/assessment/'}}" target="_self" rel="noopener noreferrer" >Assessment</a></li>
+          <li><a class="dropdown-item" href="{{site.url + 'sign-up/class-group/'}}" target="_self" rel="noopener noreferrer" >Class / Group</a></li>
         </ul>
       </li>
     </ul>
