updated support class to support group

--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -88,7 +88,7 @@ templateEngineOverride: njk,md
             psychologically, and emotionally healthy children. Classes help increase understanding about child
             development and work with parents to help their children learn, grow, and develop to meet their full potential.</p>
           <p class="lead p-3 text-left">In Person/Virtual Classes available. - 8,12, 16 or 32-hours options</p>
-          <h3 class="h3">Support Class</h3>
+          <h3 class="h3">Support Group</h3>
           <p class="lead p-3 text-left">Creates a place where individuals and families are supported and encouraged to
             discover how to cope with the burden they are carrying and how they can progress with healthy treatment. For
             example: they will learn how to focus on sharing their experiences to help them face and work through
