cecelia requested this text to be update via an email document

--- a/src/about/index.njk
+++ b/src/about/index.njk
@@ -69,8 +69,9 @@ templateEngineOverride: njk,md
     <h2 class="h2 display-4 pb-3 fw-normal">Our Team</h2>
   </div>
   <div class="col-md-11 mx-1 my-3 ">
-    <p class="p-3 lead">Our professional staff are here to help you understand how to deal with difficult situations. On
-      staff we have a variety of licenses. Like LPC, LADC, AADC, CPI, CDEA, CIRW, CTIC, etc.</p>
+    <p class="p-3 lead">Our professional staffs are here to help you understand how to deal with difficult situations. 
+      On staff, we have Licensed Professional Counselors (LPC), Licensed Drug & Alcohol Counselors (LDAC), Advanced Alcohol & Drug 
+      Counselors (AADC), Certified Parenting Instructors (CPI), Certified Anger Management Specialists (CAMS), Domestic Violence Advocate (DVA)</p>
   </div>
 </div>
 <div class="container sectionMod">
