updated parenting class

--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -82,8 +82,7 @@ templateEngineOverride: njk,md
           <h3 class="h3">Parenting Class</h3>
           <p class="lead p-3 text-left">Classes are designed to help parents obtain skills needed to raise physically, psychologically, 
             and emotionally healthy children. Classes help increase understanding about child development and work with parents to help 
-            their children learn, grow, and develop to meet their full potential.</p>
-          <p class="lead p-3 text-left">In-Person/Virtual Classes are available. - 8,12, 16 or 32-hours options</p>
+            their children learn, grow, and develop to meet their full potential. In-Person/Virtual Classes are available. - 8,12, 16 or 32-hours options</p>
           <h3 class="h3">Support Group</h3>
           <p class="lead p-3 text-left">Support group settings create a place where individuals or families are supported and encouraged 
             to discover how to cope with the burden they are carrying and how they can progress with healthy treatment. For example, 
