fixing url error from redirect update

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -9,11 +9,11 @@
           </li>
           <!-- temperarily removed
           <li class="my-3 text-center">
-            <a class="quick-link" href="{{site.url + 'outreach/'}}" target="_self" rel="noopener noreferrer">Outreach</a>
+            <a class="quick-link" href="{{site.url + '/outreach/'}}" target="_self" rel="noopener noreferrer">Outreach</a>
           </li>
           -->
           <li class="my-3 text-center">
-            <a class="quick-link" href="{{site.url + 'contact/'}}" target="_self" rel="noopener noreferrer">Contact</a>
+            <a class="quick-link" href="{{site.url + '/contact/'}}" target="_self" rel="noopener noreferrer">Contact</a>
           </li>
           <li class="my-3 text-center">
             <a  href="https://www.facebook.com/NWA-Second-Stage-Transition-102534804556882/" target="_blank" rel="noopener noreferrer"title="Facebook">
