--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -23,7 +23,7 @@ templateEngineOverride: njk,md
       <div aria-labelledby="flushtwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample"
         id="flush-collapseTwo">
         <div class="accordion-body">
-          <a class="p-2 my-3 btn btn-primary" href="{{site.url + 'sign-up/assessment/'}}" rel="noopener noreferrer">Assessment Sign-Up</a>
+          <a class="p-2 my-3 btn btn-primary" href="{{site.url + '/sign-up/assessment/'}}" rel="noopener noreferrer">Assessment Sign-Up</a>
           <h3 class="h3">Anger Management Assessment</h3>
           <p class="lead p-3 text-left">Assessments help identify other areas to work on. Anger Management Assessment can be ordered by a judge, 
             parole officer, probation officer, employer, family member, attorney, etc.</p>
@@ -60,7 +60,7 @@ templateEngineOverride: njk,md
       <div aria-labelledby="flushthree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample"
         id="flush-collapseThree">
         <div class="accordion-body">
-          <a class="p-2 my-3 btn btn-primary" href="{{site.url + 'sign-up/class-group/'}}" rel="noopener noreferrer">Class / Group Sign-Up</a>
+          <a class="p-2 my-3 btn btn-primary" href="{{site.url + '/sign-up/class-group/'}}" rel="noopener noreferrer">Class / Group Sign-Up</a>
           <h3 class="h3">Anger Management Class</h3>
           <p class="lead p-3  text-left">Individuals needing to attend anger management classes are encouraged to take
             the assessment first. Anger management Class can be ordered by a judge, parole officer, probation officer,
@@ -142,21 +142,21 @@ templateEngineOverride: njk,md
         <div class="carousel-item active">
           <div class="container">
             <div class="carousel-caption align-items-center h-75">
-              <img alt="Support Group" class="d-block fuild-img" src="{{site.url + 'images/carousels/group-discussion.jpg'}}">
+              <img alt="Support Group" class="d-block fuild-img" src="{{site.url + '/images/carousels/group-discussion.jpg'}}">
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="container">
             <div class="carousel-caption align-items-center h-75">
-              <img alt="Office" class="d-block fuild-img" src="{{site.url + 'images/carousels/nwasst-office.jpg'}}">
+              <img alt="Office" class="d-block fuild-img" src="{{site.url + '/images/carousels/nwasst-office.jpg'}}">
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="container">
             <div class="carousel-caption align-items-center h-75">
-              <img alt="Self help books" class="d-block fuild-img" src="{{site.url + 'images/carousels/selfhelp-books.jpg'}}">
+              <img alt="Self help books" class="d-block fuild-img" src="{{site.url + '/images/carousels/selfhelp-books.jpg'}}">
             </div>
           </div>
         </div>
