--- a/src/_includes/breadcrumbs/outreach-bc.njk
+++ b/src/_includes/breadcrumbs/outreach-bc.njk
@@ -2,6 +2,6 @@
 ---
 <ol class="breadcrumb">
   <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url}} target="_self" rel="noopener noreferrer"">Home</a></li>
-  <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url + 'outreach/'}} target="_self" rel="noopener noreferrer"">Outreach</a></li>
+  <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url + '/outreach/'}} target="_self" rel="noopener noreferrer"">Outreach</a></li>
   <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
 </ol>
