--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -4,8 +4,8 @@
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
 <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 <meta content="{{site.description}}" name="description">
-<link href="{{site.url + 'images/nwasst-logo.png'}}" rel="shortcut icon" type="image/png">
-<link href="{{site.url + 'sitemap.xml'}}" rel="sitemap" title="Sitemap" type="application/xml">
-<link rel="stylesheet" href="{{site.url + 'css/bootstrap.css'}}">
-<link rel="stylesheet" href="{{site.url + 'css/custom.css'}}">
+<link href="{{site.url + '/images/nwasst-logo.png'}}" rel="shortcut icon" type="image/png">
+<link href="{{site.url + '/sitemap.xml'}}" rel="sitemap" title="Sitemap" type="application/xml">
+<link rel="stylesheet" href="{{site.url + '/css/bootstrap.css'}}">
+<link rel="stylesheet" href="{{site.url + '/css/custom.css'}}">
 <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
