changed to webp file format

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -6,7 +6,7 @@ templateEngineOverride: njk,md
   <head>
     {% include '../_includes/head.html' %}
     <title>{{ title }}</title>
-    {% if page.fileSlug == ''%}<link rel="preload" href="{{site.url + '/images/trees-along-path.jpg'}}" as="image">{% endif %}
+    {% if page.fileSlug == ''%}<link rel="preload" href="{{site.url + '/images/trees-along-path-2300.webp'}}" as="image">{% endif %}
     </head>
   <body class="text">
     <header>
