--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -85,7 +85,7 @@ html, body {
   background-color: #eee;
 }
 .landing {
-  background-image: url("https://nwasecondstagetransition.org/images/trees-along-path.jpg");
+  background-image: url("https://nwasecondstagetransition.org/images/trees-along-path-2300.webp");
   max-height: 100vh;
   min-height: 100vh;
   /* Full height */
