updated parenting class text

--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -80,9 +80,11 @@ templateEngineOverride: njk,md
           <p class="lead p-3 text-left">Regardless of being a male or female, you must not remain silent. "Talk with a friend, family member, coworker, or 
             neighbor about domestic violence". In-Person Class is available. - 8,12, 16 or 32-hours options.</p>
           <h3 class="h3">Parenting Class</h3>
-          <p class="lead p-3 text-left">Classes are designed to help parents obtain skills needed to raise physically, psychologically, 
-            and emotionally healthy children. Classes help increase understanding about child development and work with parents to help 
-            their children learn, grow, and develop to meet their full potential. In-Person/Virtual Classes are available. - 8,12, 16 or 32-hours options</p>
+          <p class="lead p-3 text-left">Our parenting class is designed to help parents obtain other skills needed to raise physically, 
+            psychologically, and emotionally healthy children. The class also helps increase the parent’s understanding of the child’s 
+            development. Parents are encouraged never to attempt to manipulate their child or become their best friend, as this will mask 
+            the reasons for the negative behavior they portray. Parents should seek help because it takes a community to raise a child.
+            In-person/virtual available class hours; 8,12, 16, or 32.</p>
           <h3 class="h3">Support Group</h3>
           <p class="lead p-3 text-left">Support group settings create a place where individuals or families are supported and encouraged 
             to discover how to cope with the burden they are carrying and how they can progress with healthy treatment. For example, 
