--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -64,6 +64,6 @@
     </div>
   </div>
   <div class="row">
-    <p class="text-light text-center pt-2">Copyright NWA Second Stage Transition © 2022. All rights reserved.</p>
+    <p class="text-light text-center pt-2">Copyright NWA Second Stage Transition © <span id="year"></span>. All rights reserved.</p>
   </div>
 </div>
