--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -9,12 +9,12 @@ templateEngineOverride: njk,md
     </head>
   <body class="text">
     <header>
-      <div  class="navbar navbar-expand-md navbar-dark bd-navbar bg-primary">{% include '../_includes/header.njk' %}</div>{% if page.fileSlug != "" %}<nav aria-label="breadcrumb" class="container">{% if '/outreach/*' in page.url %}{% include '../_includes/breadcrumbs/outreach-bc.njk' %}{% else %}{% include '../_includes/breadcrumbs/base-bc.njk' %}{% endif %}</nav>{% endif %}
+      <div  class="navbar navbar-expand-md navbar-dark bd-navbar bg-blue">{% include '../_includes/header.njk' %}</div>{% if page.fileSlug != "" %}<nav aria-label="breadcrumb" class="container">{% if '/outreach/*' in page.url %}{% include '../_includes/breadcrumbs/outreach-bc.njk' %}{% else %}{% include '../_includes/breadcrumbs/base-bc.njk' %}{% endif %}</nav>{% endif %}
     </header>
     <div class="{{ 'landing' if page.fileSlug == ''}}">
       <main class="d-flex container flex-column">{{ content | safe }}</main>
     </div>
-    <footer class="bg-primary">{% include '../_includes/footer.html' %}</footer>
+    <footer class="bg-blue">{% include '../_includes/footer.html' %}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{site.url + '/javascript/footer-javascript.js'}}"></script>
   </body>
