--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -4,7 +4,7 @@ templateEngineOverride: njk,md
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {% include '../_includes/head.html' %}
+    {% include '../_includes/head.njk' %}
     <title>{{ title }}</title>{% if page.fileSlug == ''%}<link rel="preload" href="{{site.url + '/images/trees-along-path-2300.webp'}}" as="image">{% endif %}{% if page.fileSlug == '/admin/'%}<script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{% endif %}
     </head>
   <body class="text">
