invalid html - removed sectino html to deal with no header tag with seciont

--- a/src/sign-up/class-group/index.njk
+++ b/src/sign-up/class-group/index.njk
@@ -5,9 +5,9 @@ templateEngineOverride: njk,md
 ---
 <div class="container py-3">
   <!-- hero section -->
-  <section class="contact-form d-flex flex-row justify-content-center">
+  <div class="contact-form d-flex flex-row justify-content-center">
     <div class="embed-responsive mt-3" style="overflow:hidden;">
        <iframe width="640" height="891" src="https://docs.google.com/forms/d/e/1FAIpQLSemgPusyO5fjVKehktVwZfK_SOXaQFkXymh6iwkjU9e6bj9nA/viewform?embedded=true"></iframe>
     </div>
-  </section>
+  </div>
 </div>
