--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -17,7 +17,7 @@
           </li>
           <li class="my-3 text-center">
             <a  href="https://www.facebook.com/NWA-Second-Stage-Transition-102534804556882/" target="_blank" rel="noopener noreferrer" title="Facebook">
-              <img class="social-link rounded-circle" src="{{site.url + './images/facebook-logo.png'}}" alt="NWASST's profile on Facebook">
+              <img class="social-link rounded-circle" src="{{site.url + './img/facebook-logo.png'}}" alt="NWASST's profile on Facebook">
             </a>
           </li>
         </ul>
@@ -51,7 +51,7 @@
         <ul class="list-unstyled">
           <li class="text-center">
             <a class="" target="_blank" rel="noopener" href="https://www.guidestar.org/profile/84-2586015">
-              <img class="certificate-link" src="{{site.url + './images/candid-2022-silver-transparency-award.webp'}}" alt="NWASST's profile on Guidestar">
+              <img class="certificate-link" src="{{site.url + './img/candid-2022-silver-transparency-award.webp'}}" alt="NWASST's profile on Guidestar">
             </a>
           </li>
           <li class="text-center">
