--- a/src/about.njk
+++ b/src/about.njk
@@ -116,28 +116,28 @@ templateEngineOverride: njk,md
     <div class="carousel-item active">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="a counselor" class="d-block fuild-img" src="{{site.url + '/images/carousels/counselor.jpg'}}">
+          <img alt="a counselor" class="d-block fuild-img" src="{{site.url + '/img/carousels/counselor.jpg'}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="a picture with different words being used to describe Counseling" class="d-block fuild-img" src="{{site.url + '/images/carousels/counseling.jpg'}}">
+          <img alt="a picture with different words being used to describe Counseling" class="d-block fuild-img" src="{{site.url + '/img/carousels/counseling.jpg'}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="a group of parents and kids discussion issues." class="d-block fuild-img w-50" src="{{site.url + '/images/carousels/parenting-group.jpg'}}">
+          <img alt="a group of parents and kids discussion issues." class="d-block fuild-img w-50" src="{{site.url + '/img/carousels/parenting-group.jpg'}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="someone enjoying the a sunrise or sunset." style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url + '/images/carousels/sunrise.jpg'}}">
+          <img alt="someone enjoying the a sunrise or sunset." style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url + '/img/carousels/sunrise.jpg'}}">
         </div>
       </div>
     </div>
