--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -2,10 +2,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
-<!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src {{site.url + '/images/*'}}; child-src 'none';"> -->
+<!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src {{site.url + '/img/*'}}; child-src 'none';"> -->
 <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 <meta content="{{site.description}}" name="description">
-<link href="{{site.url + '/images/nwasst-logo-80.webp'}}" rel="shortcut icon" type="image/png">
+<link href="{{site.url + '/img/nwasst-logo-80.webp'}}" rel="shortcut icon" type="image/png">
 <link href="{{site.url + '/sitemap.xml'}}" rel="sitemap" title="Sitemap" type="application/xml">
 <link rel="stylesheet" href="{{site.url + '/css/bootstrap.css'}}">
 <link rel="stylesheet" href="{{site.url + '/css/custom.css'}}">
