added robot meta tag

--- a/src/get-involved.njk
+++ b/src/get-involved.njk
@@ -2,6 +2,7 @@
 title: Get Involved | NWA SST is a place where you can help those in need.
 layout: base.njk
 templateEngineOverride: njk,md
+robots: follow
 ---
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
