--- a/src/index.njk
+++ b/src/index.njk
@@ -2,6 +2,7 @@
 title: Home | NWA Second Stage Transition's a place for you when you need help the most.
 layout: base.njk
 templateEngineOverride: njk,md
+robots: follow
 ---
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 my-5  bg-white-transparent rounded max-width">
