--- a/src/404.njk
+++ b/src/404.njk
@@ -3,6 +3,7 @@ title: 404 Error | NWASST's missing website page.
 layout: base.njk
 templateEngineOverride: njk,md
 permalink: 404.html
+robots: noindex
 ---
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
