--- a/src/about.njk
+++ b/src/about.njk
@@ -2,6 +2,7 @@
 title: About | NWA Second Stage Transition's story is one of hope for those in need.
 layout: base.njk
 templateEngineOverride: njk,md
+robots: follow
 ---
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
