--- a/src/contact.njk
+++ b/src/contact.njk
@@ -2,6 +2,7 @@
 title: Contact | Connect with NWA Second Stage Transition 
 layout: base.njk
 templateEngineOverride: njk,md
+robots: follow
 ---
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
