--- a/src/donation-completed.njk
+++ b/src/donation-completed.njk
@@ -2,6 +2,7 @@
 title: Donation to NWASST Completed
 layout: base.njk
 templateEngineOverride: njk,md
+robots: noindex
 ---
 <!-- Donation Cancelation section -->
 <div id="ourStory" class="position-relative overflow-hidden p-3 p-md-3 m-md-3 text-center">
