--- a/src/services.njk
+++ b/src/services.njk
@@ -2,6 +2,7 @@
 title: Services | NWASST has a variety of services to help you. Like Assessment, Counseling, Parenting Class, Support Group, and more.
 layout: base.njk
 templateEngineOverride: njk,md
+robots: follow
 ---
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
