--- a/src/sign-up/assessment/index.njk
+++ b/src/sign-up/assessment/index.njk
@@ -2,6 +2,7 @@
 title: Assessment Sign-up
 layout: base.njk
 templateEngineOverride: njk,md
+robots: noindex
 ---
 <div class="container py-3">
   <!-- hero section -->
