fixing js source and using custom boostrap file

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,6 @@
 ---
 title: Home | NWA Second Stage Transition's a place for you when you need help the most.
-layout: base.njk
+layout: base_v2.njk
 templateEngineOverride: njk,md
 robots: follow
 ---
