--- a/src/_layouts/base_v2.njk
+++ b/src/_layouts/base_v2.njk
@@ -4,7 +4,7 @@ templateEngineOverride: njk,md
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {% include '../_includes/head.njk' %}
+    {% include '../_includes/head/head_v1.njk' %}
     <title>{{ title }}</title>{% if page.fileSlug == ''%}<link rel="preload" href="{{site.url + '/img/trees-along-path-1920.webp'}}" as="image">{% endif %}{% if page.fileSlug == '/admin/'%}<script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{% endif %}
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" as="script" defer>
     <meta http-equiv="expires" content="4500"/>
